--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     position:fixed;
     align-items:flex-start;
     align-content: flex-start;
-    justify-content:space-around;
+    justify-content:flex-start;
   }
   img {
       max-width:100%; max-height:125px;
